5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1644_2704.log
== TEST (2019-04-05 13:21:28) 
-- CODE:
n = float(input("nota de 0a10: "))
confirmacao=input("CONF: " S / N )

if  (n >= 6) ="S":
	y = (x*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 2
    confirmacao=input("CONF: " S / N )
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:21:51) 
-- CODE:
n = float(input("nota de 0a10: "))
confirmacao = input("CONF: " S / N )

if  (n >= 6) ="S":
	y = (x*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 2
    confirmacao = input("CONF: " S / N )
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:21:51) 
-- CODE:
n = float(input("nota de 0a10: "))
confirmacao = input("CONF: " S / N )

if  (n >= 6) ="S":
	y = (x*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 2
    confirmacao = input("CONF: " S / N )
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:21:51) 
-- CODE:
n = float(input("nota de 0a10: "))
confirmacao = input("CONF: " S / N )

if  (n >= 6) ="S":
	y = (x*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 2
    confirmacao = input("CONF: " S / N )
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 13:21:52) 
-- CODE:
n = float(input("nota de 0a10: "))
confirmacao = input("CONF: " S / N )

if  (n >= 6) ="S":
	y = (x*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- EXECUTION TIME:
0.126742
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    confirmacao = input("CONF: " S / N )
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:21:53) 
-- CODE:
n = float(input("nota de 0a10: "))
confirmacao = input("CONF: " S / N )

if  (n >= 6) ="S":
	y = (x*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 2
    confirmacao = input("CONF: " S / N )
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:23:02) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " S / N )

if (n >= 6):
	co = "S"
	y = (x*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 2
    co = input("CONF: " S / N )
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:23:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " S / N )

if n >= 6:
	co = "S"
	y = (x*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 2
    co = input("CONF: " S / N )
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:23:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " S / N )

if n >= 6:
	co = "S"
	y = (x*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 2
    co = input("CONF: " S / N )
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:23:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " S / N )

if n >= 6:
	co = "S"
	y = (x*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 2
    co = input("CONF: " S / N )
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:23:22) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " S / N )

if n >= 6:
	co = "S"
	y = (x*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 2
    co = input("CONF: " S / N )
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:23:22) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " S / N )

if n >= 6:
	co = "S"
	y = (x*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 2
    co = input("CONF: " S / N )
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:23:22) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " S / N )

if n >= 6:
	co = "S"
	y = (x*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 2
    co = input("CONF: " S / N )
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:23:22) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " S / N )

if n >= 6:
	co = "S"
	y = (x*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 2
    co = input("CONF: " S / N )
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:23:32) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if n >= 6:
	co = "S"
	y = (x*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:23:51) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if n >= 6:
	co = "S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 13:23:58) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if n >= 6:
	co = "S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- EXECUTION TIME:
0.189723
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:24:04) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if n >= 6:
	co = "S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:24:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if n >= 6:
	co = "S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:24:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if n >= 6:
	co = "S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:24:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if n >= 6:
	co = "S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:24:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if n >= 6:
	co = "S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:24:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if n >= 6:
	co = "S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:24:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if n >= 6:
	co = "S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:24:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if n >= 6:
	co = "S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 13:24:22) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if n >= 6:
	co = "S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- EXECUTION TIME:
0.312837
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 13:24:22) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if n >= 6:
	co = "S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- EXECUTION TIME:
0.133978
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:24:23) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if n >= 6:
	co = "S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	co="N"
	mensagem = (n)
	
print(mensagem)
	
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:25:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if co:"S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 5
    y = (n*10/100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:25:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if co:"S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 5
    y = (n*10/100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:25:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if co:"S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 5
    y = (n*10/100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:25:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if co:"S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 5
    y = (n*10/100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:25:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if co:"S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 5
    y = (n*10/100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:25:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if co:"S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 5
    y = (n*10/100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:25:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if co:"S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 5
    y = (n*10/100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:25:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if co:"S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 5
    y = (n*10/100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:25:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if co:"S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 5
    y = (n*10/100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:25:21) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if co:"S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 5
    y = (n*10/100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 13:25:22) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if co:"S"
	y = (n*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- EXECUTION TIME:
0.113945
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    y = (n*10/100)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:25:38) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if co = "S":
	y = (n*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 4
    if co = "S":
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:25:44) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if co = "S":
	y = (n*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 4
    if co = "S":
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:25:46) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if co ="S":
	y = (n*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- ERROR:
File "XXXX", line 4
    if co ="S":
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:26:00) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if co =="S":
	y = (n*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:26:06) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if co =="S":
	y = (n*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 13:26:11) 
-- CODE:
n = float(input("nota de 0a10: "))
co = input("CONF: " )

if co =="S":
	y = (n*10/100)
	mensagem = (n+y)
else:
	mensagem = (n)
	
print(mensagem)
	
	
	
-- EXECUTION TIME:
0.163256
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
